[package]
name = "educore-files"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "File storage port, S3-compatible, GCS, local filesystem adapters."

[lints]
workspace = true

[dependencies]
educore-core = { workspace = true }
educore-platform = { workspace = true }
educore-events = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
# Pinned per ADR-015 § "MSRV floor conflict resolution" (engine MSRV 1.75)
aws-sdk-s3 = { workspace = true }
# SHA-256 for the port's content-addressable checksum contract
# (`docs/ports/file-storage.md` § "Content-Addressable Hashing").
sha2 = { workspace = true }
# HMAC-SHA256 for the `SignedUrlService` helper (Phase 15
# microtask D.4). The local adapter keeps its in-tree HMAC impl
# for reference; this dep powers the helper struct.
hmac = { workspace = true }
uuid = { workspace = true }

