[package]
name = "educore-integrations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Integration port, LMS, video conferencing, custom webhooks."

[lints]
workspace = true

[dependencies]
educore-core = { workspace = true }
educore-platform = { workspace = true }
educore-rbac = { workspace = true }
educore-events = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }

