[package]
name = "educore-notify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Notification port, email, SMS, push, in-app, chat, voice, webhook adapters."

[lints]
workspace = true

[dependencies]
educore-core = { workspace = true }
educore-platform = { workspace = true }
educore-events = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

