[package]
name = "educore-payment"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Payment port, cash, cheque, bank, gateway, wallet adapter implementations."

[lints]
workspace = true

[dependencies]
educore-core = { workspace = true }
educore-platform = { workspace = true }
educore-events = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }

