[package]
name = "smsengine-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Storage port trait, repository traits, parity test suite, common types."

[lints]
workspace = true

[dependencies]
smsengine-core = { workspace = true }
smsengine-events = { workspace = true }

