[package]
name = "educore-dispatcher"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
educore-core = { workspace = true }
educore-events = { workspace = true }
educore-storage = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
