[package]
name = "educore-events-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Calendar events, holidays, weekends, incidents."

[lints]
workspace = true

[dependencies]
educore-core = { workspace = true }
educore-platform = { workspace = true }
educore-rbac = { workspace = true }
educore-events = { workspace = true }
educore-settings = { workspace = true }

